--- a/RedditClone/app/views/users/_form.html.erb
+++ b/RedditClone/app/views/users/_form.html.erb
@@ -1,16 +1,16 @@
-  <input
-    type="hidden"
-    name="authenticity_token"
-    value="<%= form_authenticity_token %>">
-  
-  <label>User Name
-    <input type="text" name="user[user_name]">
-  </label>
-  <br>
-  
-  <label>Password
-    <input type="password" name="user[password]">
-  </label>
-  <br>
-  
-  <input type="submit">
+<input
+  type="hidden"
+  name="authenticity_token"
+  value="<%= form_authenticity_token %>">
+
+<label>User Name
+  <input type="text" name="user[user_name]" value="<%= @user.user_name %>">
+</label>
+<br>
+
+<label>Password
+  <input type="password" name="user[password]">
+</label>
+<br>
+
+<input type="submit">
