--- a/RedditClone/app/views/layouts/application.html.erb
+++ b/RedditClone/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= flash[:errors] %><br>
+  
   <% if logged_in? %>
     <%= "Logged in as #{current_user.user_name}" %>
     <%= button_to "Logout", session_url, method: :delete %>
